ALigned login icon so it is displayed correct in chrome and firefox

--- a/sass/_ddbasic.user.scss
+++ b/sass/_ddbasic.user.scss
@@ -128,10 +128,11 @@
 
       color: $white;
       font-family: $theme-icon-library-font;
+      line-height: 100%;
 
-      position: absolute;
       left: 20px;
-      top: 12px;
+      position: absolute;
+      top: 16px;
       z-index: 99;
     }
 
